# invest-gcm-downscaling

./: README.md  pyproject.toml
sample_data/: gcm_downscaling_datastack.json  invest_gcm_downscaling@0_0_1_args.json  sample_polygon.dbf  sample_polygon.geojson  sample_polygon.qmd  sample_polygon.shp  sample_polygon.shx
src/: invest-gcm-downscaling.py
src/invest_gcm_downscaling/: __init__.py  invest_gcm_downscaling.py
