[build-system]
requires = ["setuptools >= 40.6.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name="invest_gcm_downscaling"
version="0.0.1"
dependencies = [
    "taskgraph",
    "pygeoprocessing",
    "natcap.invest>=3.16.0a2",
    "knn @ git+https://github.com/natcap/gcm-downscaling.git"] 

[tool.natcap.invest]
api_version = "v1"
package_name = "invest_gcm_downscaling"
conda_dependencies = [
    "affine",
    "dask",
    "gcsfs",
    "geopandas",
    "google-auth",
    "ipython",
    "jupyter",
    "matplotlib",
    "netCDF4",
    "numpy",
    "pandas",
    "pint",
    "pyextremes",
    "pygeoprocessing",
    "pytest",
    "python",
    "rasterio",
    "rechunker",
    "scipy",
    "seaborn",
    "xarray",
    "zarr",
    "taskgraph"
]